# scratch_prog_lang

./: .gitignore  .inter.py.swp  EXTENSION_README.md  README.md  advanced_example.sc  curl_install.sh  demo.py  demo_gui.py  example.sc  extension_challenge_example.sc  first_steps_complete.sc  install.sh  launch_gui.py  loop_move_example.sc  main.py  pyproject.toml  setup.py  test_extension.sh  test_token_count.sc
docs/: report.tex
examples/: door_master.sc  extension_challenge_example.sc  loop_move_example.sc  multi_key.sc  room_explorer.sc
scripts/: curl_install.sh  install.sh
src/scratch/: __main__.py  extensions.py  game.py  gui_game.py  inter.py  interpreter.py  programs.py  sample_programs.py  vault_runner.py
tests/: simple_test_suite.py  test.py
