[project]
name = "vault-runner"
version = "0.2.0"
description = "A simple programming language for controlling a robot in a 2D vault environment"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vault Runner Team", email = "team@vaultrunner.dev"}
]
keywords = ["programming", "language", "education", "robot", "simulation", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "black>=21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vault-runner"
Repository = "https://github.com/yourusername/vault-runner"
Documentation = "https://vault-runner.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/vault-runner/issues"

[project.scripts]
vault-runner = "scratch.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scratch = ["*.txt", "*.md"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
